# controllers/userController.js
@@ -1,10 +1,47 @@
 import User from '../models/userModel.js';
-import * as factory from './handlerFactory.js';
 import catchAsync from '../utils/catchAsync.js';
 import HttpError from '../utils/httpError.js';
 import { HttpStatus, success } from '../utils/responseHandler.js';
 import { generateToken } from '../utils/jwtUtils.js';
 import { filterObjectFields, filterDocumentFields } from '../utils/dataFilter.js';
+
+export const getProfile = catchAsync(async (req, res, next) => {
+  res.status(500).json({
+    status: 'error',
+    message: 'This route is not yet implemented!',
+  });
+});
+
+export const updateProfile = catchAsync(async (req, res, next) => {
+  // 1. Check if password update is requested
+  const { password } = req.body;
+  if (password) {
+    return next(
+      new HttpError(
+        "Password updates are not allowed through this endpoint. To update your password, please use the '/api/users/update-password' endpoint.",
+        HttpStatus.BAD_REQUEST,
+      ),
+    );
+  }
+
+  // 2. Filter and sanitize input fields to prevent unauthorized data injection
+  const filteredBody = filterObjectFields(req.body, ['name', 'email', 'photo', 'role']);
+
+  // 3. Check if there is no any valid fields to update
+  const modifiedFields = Object.keys(filteredBody).length;
+  if (!modifiedFields && !req.file) {
+    return next(new HttpError('No valid fields provided in the request body', HttpStatus.BAD_REQUEST));
+  }
+
+  // 4. Merge the filtered fields into the user's current data
+  Object.assign(req.user, filteredBody);
+  await req.user.save();
+
+  // 5. Filter user document to remove sensitive information from the response
+  const filteredUser = filterDocumentFields(req.user, ['name', 'email', 'photo', 'role']);
+
+  success(res, HttpStatus.ACCEPTED, filteredUser, 'user', generateToken(req.user._id), 'You data updated successfully');
+});
 
 export const updatePassword = catchAsync(async (req, res, next) => {
   // 1. Check if both currentPassword and newPassword are provided in the request.
@@ -38,33 +75,9 @@ export const updatePassword = catchAsync(async (req, res, next) => {
   success(res, HttpStatus.OK, null, null, token, 'Password Updated Successfully');
 });
 
-export const updateCurrentUser = catchAsync(async (req, res, next) => {
-  // 1. Check if password update is requested
-  const { password } = req.body;
-  if (password) {
-    return next(
-      new HttpError(
-        "Password updates are not allowed through this endpoint. To update your password, please use the '/api/users/update-password' endpoint.",
-        HttpStatus.BAD_REQUEST,
-      ),
-    );
-  }
-
-  // 2. Filter and sanitize input fields to prevent unauthorized data injection
-  const filteredBody = filterObjectFields(req.body, ['name', 'email', 'photo', 'role']);
-
-  // 3. Check if there is no any valid fields to update
-  const modifiedFields = Object.keys(filteredBody).length;
-  if (!modifiedFields && !req.file) {
-    return next(new HttpError('No valid fields provided in the request body', HttpStatus.BAD_REQUEST));
-  }
-
-  // 4. Merge the filtered fields into the user's current data
-  Object.assign(req.user, filteredBody);
-  await req.user.save();
-
-  // 5. Filter user document to remove sensitive information from the response
-  const filteredUser = filterDocumentFields(req.user, ['name', 'email', 'photo', 'role']);
-
-  success(res, HttpStatus.ACCEPTED, filteredUser, 'user', generateToken(req.user._id), 'You data updated successfully');
+export const deleteProfile = catchAsync(async (req, res, next) => {
+  res.status(500).json({
+    status: 'error',
+    message: 'This route is not yet implemented!',
+  });
 });
